--- a/templates/nested/eks-prerequsite.yaml
+++ b/templates/nested/eks-prerequsite.yaml
@@ -8,7 +8,7 @@ Metadata:
             default: EKS Control Panel Configuration
           Parameters:
             - TemplateBucketName
-            - TemplateBucketKeyPrefix
+            - Environment
             - VPCID
             - NodeSecurityGroup
             - ProvisionSecurityGroup
@@ -16,7 +16,7 @@ Metadata:
       ParameterLabels:
         TemplateBucketName:
           default: The name of the S3 bucket that holds the templates
-        TemplateBucketKeyPrefix:
+        Environment:
           default: The Key prefix for the templates in the S3 template bucket
         VPCID:
           default: The ID of the VPC to deploy the EKS Cluster into
@@ -31,7 +31,7 @@ Parameters:
       ConstraintDescription: "Bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
       Description: "S3 bucket name that contains the CFN templates (VPC, Provision etc). This string can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
       Type: "String"
-    TemplateBucketKeyPrefix:
+    Environment:
       AllowedPattern: "^[0-9a-zA-Z-/]*$"
       ConstraintDescription: "Template bucket key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
       Type: "String"
